--- a/index.html
+++ b/index.html
@@ -22,24 +22,77 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="#">Portfolio
+          </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<div class="hero">
+<div class="hero text-start">
     <h1>hello, i'm a 
     <div>front end developer</div>
     </h1>
-    <p>My name is Cynthia and I'm starting my journey in the coding world.</p>
-    <button href="#">Contact me</button>
+    <p class=" text-star tmb-5">My name is Cynthia and I'm starting my journey in the coding world.</p>
+      <button href="#">Contact me</button>
 </div>
+
+    <div class="container text-start mb-5">
+    <h3>Portfolio</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="/images/landingpage.png" alt= "landing page" class="img-fluid rounded d-none d-sm-block" />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="mb-3">Landing Page</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link button-link" title="go to">See website</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-sm-6">
+          <h2 class="mb-3">Weather app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mb-5 mt-5">
+            <a href="#" class="primary-link button-link" title="launch">Launch  App</a>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img src="/images/weatherapp.png" alt="waether project" class="img-fluid rounded d-none d-sm-block" />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <img src="/images/wip.png" alt="work in progress" class="img-fluid rounded d-none d-sm-block" />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-3">Work in progress</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link button-link">Not available yet</a>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
