--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   </head>
   <body>
      <div class="hero">
-      <p> Hey, there! I am</p>
-      <h1>CYNTHIA ALVEZ</h1>
-      <h2 class="mb-5">Front-end developer based in Bulgaria</h2>
+      <H2> Hey, there!</H2>
+      <h1>Welcome to my page.</h1>
+      <h2 class="mb-5">I am a freelance front-end developer, based in Bulgaria</h2>
+     Here is what I can do for you
     <br/>
     <br/>
    
