--- a/portfolio.html
+++ b/portfolio.html
@@ -8,17 +8,45 @@
     <title>Portfolio</title>
 </head>
 <body>
-<p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
-    <div class="container">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="/index.html">Home</a>
+    <button class="navbar-toggler" 
+    type="button" 
+    data-bs-toggle="collapse" 
+    data-bs-target="#navbarNavDropdown" 
+    aria-controls="navbarNavDropdown" 
+    aria-expanded="false" 
+    aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/about.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/portfolio.html">Portfolio</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+    <div class="portfolio container">
+      <h3 class="text-center m-5">
+      These are early projects I've worked on as part of the SheCodes course.
+      </h3>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/landingpage.png" class="img-fluid" alt="landing page" />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Landing Page</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -43,16 +71,16 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/weatherapp.png" class="img-fluid" alt="weather app" />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/wip.png" class="img-fluid" alt="wip" />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">Work In Progress</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
