--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me</title>
+    <title>About - Cynthia Alvez </title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -30,7 +30,7 @@
     ></script>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+<nav class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid ">
     <a class="navbar-brand" href="/index.html">Home</a>
     <button class="navbar-toggler" 
@@ -44,7 +44,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="active">
           <a class="nav-link" href="/about.html">About Me</a>
         </li>
         <li class="nav-item">
