--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact - Cynthia Alvez </title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -44,7 +44,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/about.html">About Me</a>
         </li>
-        <li class="nav-item">
+        <li class="active">
           <a class="nav-link" href="/contact.html">Contact</a>
         </li>
         <li class="nav-item">
