--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Portfolio Project</title>
+     <meta name="description"  content="Cynthia is front-end developer based in Bulgaria" />
+    <title>Front end developer - Cynthia Alvez </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,11 +29,10 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-  <div class="container-fluid ">
-    <a class="navbar-brand" href="/index.html">Home</a>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+  <div class="container-fluid nav">
+    <a class="navbar-brand" href="/index.html" title="homepage">Home</a>
     <button class="navbar-toggler" 
     type="button" 
     data-bs-toggle="collapse" 
@@ -45,13 +45,13 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/about.html">About Me</a>
+          <a class="nav-link" href="/about.html" title="about Cynthia">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/contact.html" title="contact">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
         </li>
       </ul>
     </div>
@@ -61,7 +61,7 @@
 <div class="hero">
       <H2> Hey, there!</H2>
       <h1>Welcome to my page.</h1>
-      <h2 class="mb-5">I am a freelance front-end developer, based in Bulgaria</h2>
+      <h2 class="mb-5">I am a (future) front-end developer, based in Bulgaria</h2>
     <br/>
     <br/>
      Here is what I can do for you
@@ -97,8 +97,9 @@
           <img src="images/gd.png" class="img-fluid rounded shadow" alt="GitHub"/>
         </div>
         </div>
-        
+      
       </div>
+      <div class="footer">
        <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
@@ -111,5 +112,15 @@
         </div>
       </footer>
       </div>
+      </div>
+        <p class="text-center mt-5">
+        ✌️ This website was coded by Patricia Pereira, and is
+        <a
+          href="https://github.com/matthieua/portfolio-project"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
   </body>
 </html>
