--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="src/styles.css">
-    <title>Portfolio</title>
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>Portfolio- Cynthia Alvez </title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-  <div class="container-fluid ">
+  <div class="container-fluid">
     <a class="navbar-brand" href="/index.html">Home</a>
     <button class="navbar-toggler" 
     type="button" 
@@ -28,14 +39,13 @@
         <li class="nav-item">
           <a class="nav-link" href="/contact.html">Contact</a>
         </li>
-        <li class="nav-item">
+        <li class="active">
           <a class="nav-link" href="/portfolio.html">Portfolio</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
     <div class="portfolio container">
       <h3 class="text-center m-5">
       These are early projects I've worked on as part of the SheCodes course.
@@ -53,7 +63,8 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/593/235/original/FinalProjectCynthiaAlvez.html?1681907521" 
+            class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
@@ -67,7 +78,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="https://calm-axolotl-39c782.netlify.app/" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -87,10 +98,33 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="#" class="btn btn-branding-outline"> Almost there </a>
           </div>
         </div>
       </div>
+      <div class="footer container-fluid">
+       <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p>Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+      </footer>
+      </div>
+      </div>
+        <p class="text-center mt-5">
+        This website was coded by Cynthia Alvez, and is
+        <a
+          href="https://github.com/Mocca24/portfolio"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
 </body>
 </html>
 </body>
