--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         </div>
       
       </div>
-      <div class="footer">
+      <div class="footer container-fluid">
        <footer>
-        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div class="contact-box shadow justify-content-between mb-5 d-none d-md-flex">
           <div>
             <h4>Work Inquiry</h4>
             <p>Let's work together</p>
@@ -114,9 +114,9 @@
       </div>
       </div>
         <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        This website was coded by Cynthia Alvez, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/Mocca24/portfolio"
           target="_blank"
         >
           open-sourced
