--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
       </div>
       <div class="footer container-fluid">
        <footer>
-        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div class="contact-box shadow justify-content-between mb-5 d-none d-md-flex">
           <div>
             <h4>Work Inquiry</h4>
             <p>Let's work together</p>
