--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,31 @@
         </div>  
         </div>
       </div>
+      
+      <div class="footer container-fluid">
+       <footer>
+        <div class="contact-box shadow justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p>Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+      </footer>
+      </div>
+      </div>
+        <p class="text-center mt-5">
+        This website was coded by Cynthia Alvez, and is
+        <a
+          href="https://github.com/Mocca24/portfolio"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
+
     </div>
   </body>
 </html>
