--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
     
 <div class="hero">
       <H2> Hey, there!</H2>
-      <h1>Welcome to my page.</h1>
-      <h2 class="mb-5">I am a (future) front-end developer, based in Bulgaria</h2>
+      <h1>My name is Cynthia.</h1>
+      <h2 class="mb-5">Welcome to my Page. Make yourself comfortable.
+      </h2>
     <br/>
     <br/>
      Here is what I can do for you
