changed footer container

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
         </div>
       </div>
       
-      <div class="footer container-fluid">
+      <div class="footer container">
        <footer>
         <div class="contact-box shadow justify-content-between mb-5 d-none d-md-flex">
           <div>
