--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       
       </div>
-      <div class="footer container-fluid">
+      <div class="footer container">
        <footer>
         <div class="contact-box shadow justify-content-between mb-5 d-none d-md-flex">
           <div>
