--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/ebdf023e2c.js" crossorigin="anonymous"></script>
   </head>
   <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
@@ -40,7 +37,7 @@
     aria-controls="navbarNavDropdown" 
     aria-expanded="false" 
     aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
