--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - Cynthia Alvez </title>
-
+     <meta name="description"  content="Cynthia is front-end developer based in Bulgaria" />
+    <title>Front end developer - Cynthia Alvez </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,15 +24,12 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/ebdf023e2c.js" crossorigin="anonymous"></script>
   </head>
   <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary ">
-  <div class="container-fluid ">
-    <a class="navbar-brand" href="/index.html">Home</a>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+  <div class="container-fluid nav">
+    <a class="navbar-brand" href="/index.html" title="homepage">Home</a>
     <button class="navbar-toggler" 
     type="button" 
     data-bs-toggle="collapse" 
@@ -40,18 +37,18 @@
     aria-controls="navbarNavDropdown" 
     aria-expanded="false" 
     aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="active">
-          <a class="nav-link" href="/about.html">About Me</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/about.html" title="about Cynthia">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/contact.html" title="contact">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
         </li>
       </ul>
     </div>
