--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
         </li>
+        <li class="nav-item">
+        <a href ="./src/Cynthia Alvez CV.pdf" attributes-list download ="optional-value"> My CV </a>  
+        </li>
       </ul>
     </div>
   </div>
