--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
     <script src="https://kit.fontawesome.com/ebdf023e2c.js" crossorigin="anonymous"></script>
   </head>
   <body>
+  <div class= contact-container> 
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid nav">
     <a class="navbar-brand" href="/index.html" title="homepage">Home</a>
@@ -49,6 +50,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
+          <li class="nav-item">
+        <a class="nav-link" href ="./src/Cynthia Alvez CV.pdf" attributes-list download title="Cynthia-Alvez-CV"> My resumé</a>  
+        </li>
         </li>
       </ul>
     </div>
@@ -107,7 +111,7 @@
           open-sourced
         </a>
       </p>
-
+</div>
     </div>
   </body>
 </html>
