--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-        <a href ="./src/Cynthia Alvez CV.pdf" attributes-list download ="optional-value"> My CV </a>  
+        <a class="nav-link" href ="./src/Cynthia Alvez CV.pdf" attributes-list download title="Cynthia-Alvez-CV"> My resumé</a>  
         </li>
       </ul>
     </div>
