--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link" href ="./src/Cynthia Alvez CV.pdf" attributes-list download title="Cynthia-Alvez-CV"> My resumé</a>  
+        </li>
       </ul>
     </div>
   </div>
@@ -65,7 +68,7 @@
         <div class="col">
           <div class="project-desciption">
             <h2 class="mb-5">Landing Page</h2>
-            <p class="mb-5 text-muted">
+            <p class="mb-5">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
               they live in Bookmarksgrove right at the coast of the Semantics, a
@@ -80,7 +83,7 @@
         <div class="col">
           <div class="project-desciption">
             <h2 class="mb-5">Weather App</h2>
-            <p class="mb-5 text-muted">
+            <p class="mb-5 ">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
               they live in Bookmarksgrove right at the coast of the Semantics, a
