--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
     <script src="https://kit.fontawesome.com/ebdf023e2c.js" crossorigin="anonymous"></script>
   </head>
   <body>
+  <div class = about-container> 
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid nav">
     <a class="navbar-brand" href="/index.html" title="homepage">Home</a>
@@ -50,6 +51,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/portfolio.html" title="portfolio">Portfolio</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link" href ="./src/Cynthia Alvez CV.pdf" attributes-list download title="Cynthia-Alvez-CV"> My resumé</a>  
+        </li>
       </ul>
     </div>
   </div>
@@ -69,6 +73,7 @@
           <img src="images/IMG_20210421_164423_215.jpg" alt="" class="img-fluid" />
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
